# burro

./: CppProperties.json  Makefile.am  README.md  README.openbsd  TODO.org  bootstrap.sh  build.sh  configure.ac  run-uninstalled.sh
data/: Makefile.am  com.lonelycactus.burroengine.desktop
game/: FancyDan.xcf  Makefile.am  MrWells.xcf  MrsWestfalia.xcf  TheNurse.xcf  cache.burro  demo.burro  errors.burro  game.burro  media.txt  screencast01.webm  visiting-day.burro
m4/: guile.m4
src/: Makefile.am  burro-glade.xml  burro.scm  burro_app.c  burro_app_win.c  burro_app_win.h  burro_canvas.c  burro_canvas.h  burro_canvas_audio.c  burro_canvas_audio.h  burro_canvas_bg.c  burro_canvas_vram.c  burro_canvas_vram.h  burro_console.c  burro_console.h  burro_debug_window.c  burro_debug_window.h  burro_journal.c  burro_journal.h  burro_lineedit.c  burro_lisp.c  burro_lisp.h  burro_preferences_dialog.c  burro_repl.c  burro_repl.h  burro_resources.h  canvas.c  canvas.h  canvas_audio.c  canvas_audio.h  canvas_bg.c  canvas_bg.h  canvas_colors.c  canvas_colors.h  canvas_coreaudio.c  canvas_lib.c  canvas_lib.h  canvas_pulseaudio.c  canvas_vram.c  canvas_vram.h  (+3 more)
src/burro/: debug.scm  drivers.scm  error.scm  pm.scm
src/burro/process/: base.scm  call-procedure.scm  fade.scm  text-click.scm  wait-on-click.scm  wait.scm
src/r/: app-menu.ui  burro.resource.xml  burro_preferences_dialog.ui  debug-window.ui  gears-menu.ui  window.ui
test/: Makefile.am
tools/ogg/: build.sh  resample.c
